# MyProxy

./: .gitignore  Makefile  Makefile.am  MyProxy.sln  configure  configure.ac
Common/: Common.vcxproj  Common.vcxproj.filters  Makefile.am  abstractproxysession.cpp  abstractproxysession.h  abstractproxytunnel.cpp  abstractproxytunnel.h  basic.cpp  basic.h  configure.ac  define.h  iohelper.cpp  iohelper.h  packages.cpp  packages.h  sslsetting.cpp  sslsetting.h
MyProxyLocal/: MyProxyLocal.vcxproj  MyProxyLocal.vcxproj.filters  basic.cpp  local.cpp  local.h  main.cpp  server.h  sslsetting.cpp
MyProxyServer/: Makefile.am  MyProxyServer.vcxproj  MyProxyServer.vcxproj.filters  configure.ac  main.cpp  server.cpp  server.h
test/: main.cpp  test.vcxproj
